# eyeos-style

./: CMakeLists.txt  eyeos.colors  eyeos.themerc  eyeosresources.qrc  eyeosstyle.cpp  eyeosstyle.h  eyeosstyleplugin.cpp  eyeosstyleplugin.h
